# RAB-Cred

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: analysis_utils.py  data_exploration.ipynb  outcome_correlation.ipynb  paths.py  test_prompt_sensitivity.ipynb  test_results.ipynb  val_results.ipynb
experiment_configs/: ACLW_test200.yml  ACLW_val.yml
llm_annotation/: get_llm_preds.py  llm_utils.py  schemas.py
llm_annotation/prompts_system/: SP1.txt  SP2.txt  SP3.txt  SP4.txt  SP5.txt
llm_annotation/prompts_user/: UP1-FS.txt  UP1.txt  UP2.txt  UP3.txt  UP4.txt
