[project]
name = "RAB-Cred-LLM-annotation-errors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.11.0",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "kernels==0.12.1",
    "matplotlib==3.10.7",
    "mistral-common==1.8.8",
    "mistral-inference==1.6.0",
    "omegaconf==2.3.0",
    "outlines==1.2.8",
    "pandas==2.3.3",
    "pandas-ml==0.6.1",
    "pip>=26.1.1",
    "plotnine==0.15.0",
    "protobuf==6.33.0",
    "py-jsonl==1.3.21",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "sentencepiece==0.2.1",
    "tabulate>=0.10.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers==5.0.0",
    "triton==3.6.0",
]
